feat: update snapshot
feat(links-view): add title of appointment,
feat(links-view): add share via email button,
feat(appointment-summary): make newlines in description visible,
feat(derivates): make api-media-type variable,
build(audit): fix vulnerabilities in prod,
build(version): add version env variable

--- a/src/app/links/links.component.html
+++ b/src/app/links/links.component.html
@@ -6,6 +6,7 @@
         <h3 class="text-center font-medium text-bold" data-id="linksHeading">
           {{ 'links.share' | translate }}
         </h3>
+        <h4 data-id="appointmentTitle">{{model.title}}</h4>
       </div>
     </div>
     <div class="row mt-4">
@@ -35,6 +36,15 @@
             </div>
           </div>
           <div class="col-12 d-flex justify-content-end">
+            <button
+              (click)="createPollMail()"
+              class="btn btn-transparent text-primary"
+              data-id="inviteLinkEmail"
+              ngxClipboard
+              type="button"
+            >
+              {{ 'links.email.send' | translate }}
+            </button>
             <button
               [cbContent]="absoluteAppointmentLink"
               class="btn btn-transparent text-primary"
@@ -84,6 +94,15 @@
             </div>
           </div>
           <div class="col-12 d-flex justify-content-end">
+            <button
+              (click)="createAdminMail()"
+              class="btn btn-transparent text-primary"
+              data-id="linkAdmin"
+              ngxClipboard
+              type="button"
+            >
+              {{ 'links.email.send' | translate }}
+            </button>
             <button
               [cbContent]="absoluteAdminLink"
               class="btn btn-transparent text-primary"
