--- a/src/environments/environment.ts.tmpl
+++ b/src/environments/environment.ts.tmpl
@@ -22,4 +22,5 @@ termsOfService: @TOS@,
 accessibility: @ACCESSIBILITY@,
 apiRequestTimeoutInMs: @API_REQUEST_TIMEOUT_IN_MS@,
 consoleLoggingOptions: @CONSOLE_LOGGING_OPTIONS@,
+apiMediaType: @API_MEDIA_TYPE@
 };
